--- a/doctor.html
+++ b/doctor.html
@@ -56,7 +56,7 @@
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 				<ul class="navbar-nav text-white">
 				  <li class="nav-item">
-					<a class="nav-link text-white" aria-current="page" href="./demo-doctors(1).html">Home</a>
+					<a class="nav-link text-white" aria-current="page" href="./index.html">Home</a>
 				  </li>
 				  <li class="nav-item">
 					<a class="nav-link active text-white" href="./doctor.html">Doctor</a>
