--- a/panchakarma.html
+++ b/panchakarma.html
@@ -59,7 +59,7 @@
 			  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 				<ul class="navbar-nav text-white">
 				  <li class="nav-item">
-					<a class="nav-link text-white pe-lg-3" aria-current="page" href="./demo-doctors(1).html">Home</a>
+					<a class="nav-link text-white pe-lg-3" aria-current="page" href="./index.html">Home</a>
 				  </li>
 				  <!-- <li class="nav-item">
 					<a class="nav-link text-white" href="./doctor.html">Doctor</a>
