--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Doctors | Canvas</title>
+	<title>Shankari Ayurveda</title>
 
 </head>
 
