--- a/premium-nadi-pariksha.html
+++ b/premium-nadi-pariksha.html
@@ -33,7 +33,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Doctors | Canvas</title>
+	<title>Shankari Ayurveda</title>
 
 </head>
 
