--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				<div class="row justify-content-between align-items-center py-lg-6 py-5">
 					<div class="col-lg-5 mb-4 mb-lg-0">
 						<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="50">
-						<h2 class="display-3 fw-bold color all-ts">A Truly amazing <span class="underliner nocolor viewport-detect" data-delay="1000">Doctor</u></span> is hard to find. <img class="position-relative" style="top: -5px;" src="demos/doctors/images/icons/smile.svg" alt="..." width="50"></h2>
+						<h2 class="display-3 fw-bold color all-ts mt-lg-0 mt-5">A Truly amazing <span class="underliner nocolor viewport-detect" data-delay="1000">Doctor</u></span> is hard to find. <img class="position-relative" style="top: -5px;" src="demos/doctors/images/icons/smile.svg" alt="..." width="50"></h2>
 						<p>Nadi Pariksha is the ancient art and science of detecting the existing status of a person's body, mind, soul and spirit.</p>
 						<p>Panchakarma treatment is an Ayurvedic therapy that helps to remove toxins and impurities from the body and mind.</p>
 						<!-- <a href="https://santosh-nairiti.zohobookings.in/#/customer/shankariayurvedapharmacy" class="button py-3 px-4 h-text-light rounded mx-0">Request an Appoinment<i class="bi-arrow-right ms-2 me-0"></i></a> -->
