--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h3 class="display-5">Premium Nadi Pariksha</h3>
-										<p>Nadi Pariksha is the ancient ayurvedic technique of diagnosis through the pulse. It can accurately diagnose physical, mental and emotional imbalances as well as diseases.</p>
+										<p>Nadi Pariksha is the ancient ayurvedic technique of diagnosis through the pulse.</p>
 										<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Yoga</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i> Diet</li>
@@ -437,7 +437,7 @@
 									<div class="col-md-5">
 										<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
 										<h3 class="display-5">Panchakarma Treatments</h3>
-										<p>Panchakarma is a method of cleansing the body of all the unwanted waste after lubricating it. Panchakarma are 5 (five) in number; hence the term PANCHA (five) – KARMA (procedures).</p>
+										<p>Panchakarma is a method of cleansing the body of all the unwanted waste after lubricating it.</p>
 										<ul class="list-unstyled text-larger">
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Nasya</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Vamana</li>
