--- a/index.html
+++ b/index.html
@@ -850,9 +850,9 @@
 							  </div>
 						</div>
 
-						<div class="col-lg-4 col-6">
+						<div class="col-lg-4 col-6 ">
 
-							<div class="widget widget_links widget-li-noicon">
+							<div class="widget widget_links widget-li-noicon"><br class="break-point">
 
 								<h4 class="text-uppercase mb-4">About Us</h4>
 
