--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
 					  <li><a class="dropdown-item" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
-					  <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li>
+					  <!-- <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li> -->
 					</ul>
 				  </li>
 				  <li class="nav-item">
@@ -443,7 +443,7 @@
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Vamana</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Boost Immunity</li>
 										</ul>
-										<a href="./panchakarma.html"><button type="button" class="button py-3 px-4 h-text-light rounded mx-0">Book a Appoinment</button></a>
+										<h1>Comming Soon..</h1>
 									</div>
 									<div class="col-md-6">
 										<img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt=".." class="rounded-6 h-100 object-cover">
