--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
 	============================================= -->
 	<title>Shankari Ayurveda</title>
 
+	 <style>
+        .carousel-item {
+            min-height: 400px; /* Adjust as needed */
+        }
+
+        /* Custom styles for small screens */
+        @media (max-width: 768px) {
+            .carousel-item {
+                height: auto; /* Ensure items are auto height */
+                overflow-y: auto; /* Enable vertical scrolling if content overflows */
+            }
+            .carousel-item .card-body {
+                height: auto; /* Ensure card-body adjusts with content */
+            }
+        }
+    </style>
+
 </head>
 
 <!-- stretched (body)
