--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 height: auto; /* Ensure items are auto height */
                 overflow-y: auto; /* Enable vertical scrolling if content overflows */
             }
-            .carousel-item .card-body {
-                height: auto; /* Ensure card-body adjusts with content */
-            }
+		.card-text {
+			overflow:scroll;
+			 height: auto;
         }
     </style>
 
