--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 overflow-y: auto; /* Enable vertical scrolling if content overflows */
             }
 		.card-text {
-			overflow:scroll;
+			overflow:auto;
 			 height: auto;
         }
     </style>
