--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
                 overflow-y: auto; /* Enable vertical scrolling if content overflows */
             }
 		.card-text {
-			overflow:auto;
-			 height: auto;
-			max-height: 700px;
+			height: 200px;
+                        overflow: scroll;
         }
     </style>
 
@@ -461,7 +460,7 @@
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Vamana</li>
 											<li class="mb-3"><i class="bi-check-circle-fill me-2 color-yellow"></i>Boost Immunity</li>
 										</ul>
-										<h1>Comming Soon..</h1>
+										<h1>Coming soon...</h1>
 									</div>
 									<div class="col-md-6">
 										<img src="https://t4.ftcdn.net/jpg/05/90/17/23/360_F_590172388_eEZ8vGqNqAtYSNP7LcRTMyl0db5kemNX.jpg" alt=".." class="rounded-6 h-100 object-cover">
