--- a/contactUs.html
+++ b/contactUs.html
@@ -261,7 +261,7 @@
 
 
                 <!-- contact -->
-                <section class="wow fadeIn border-bottom border-color-extra-light-gray half-section">
+                <section class="wow fadeIn border-bottom border-color-extra-light-gray half-section mt-lg-0 mb-lg-0 mt-4 mb-4">
                     <div class="container-fluid">
                       <div class="row mb-lg-5 mt-lg-5">
                         <!-- start features box item -->
