--- a/contactUs.html
+++ b/contactUs.html
@@ -31,6 +31,13 @@
 
 	<link rel="stylesheet" href="Google Sheet.css">
 
+	<style>
+		@media screens and(max-width:360px) {
+			.banner-section{
+				width:auto;
+			}
+	</style>
+
 	<!-- Document Title
 	============================================= -->
 	<title>Shankari Ayurveda</title>
