--- a/contactUs.html
+++ b/contactUs.html
@@ -32,10 +32,10 @@
 	<link rel="stylesheet" href="Google Sheet.css">
 
 	<style>
-		@media screens and(max-width:360px) {
-			.banner-section{
-				width:auto;
-				height:20vh;
+		@media screen and (max-width: 360px) {
+		 .banner-section{
+			width:auto;
+			height:20vh;
 			}
 	</style>
 
