--- a/contactUs.html
+++ b/contactUs.html
@@ -34,8 +34,7 @@
 	<style>
 		@media screen and (max-width: 360px) {
 		 .banner-section{
-			width:auto;
-			height:20vh;
+			object-fit: cover;
 			}
 	</style>
 
