--- a/contactUs.html
+++ b/contactUs.html
@@ -31,12 +31,7 @@
 
 	<link rel="stylesheet" href="Google Sheet.css">
 
-	<style>
-		@media screen and (max-width: 360px) {
-		 .banner-section{
-			object-fit: cover;
-			}
-	</style>
+	
 
 	<!-- Document Title
 	============================================= -->
@@ -93,7 +88,7 @@
 		============================================= -->
 
 
-		<section class="banner-section" style="background-image: url(https://ganeshaaayurveda.com/assets/images/2.jpg); opacity: 0.9; background-size: cover; height: 50vh; margin-top: 90px; width: 100%; display: flex; justify-content: center; text-align: center; align-items: center;">
+		<section class="banner-section" style="background-image: url(https://ganeshaaayurveda.com/assets/images/2.jpg); opacity: 0.9; background-size: cover; height: 50vh; margin-top: 90px; width: 100%; display: flex; justify-content: center; text-align: center; align-items: center; object-fit:cover;">
             <h3 class="banner-heading text-white" style="font-size: 3rem; font-weight: 700;">Contact Us</h3>
         </section>
 
