--- a/contactUs.html
+++ b/contactUs.html
@@ -88,7 +88,7 @@
 		============================================= -->
 
 
-		<section class="banner-section" style="background-image: url(https://ganeshaaayurveda.com/assets/images/2.jpg); opacity: 0.9; background-size: cover; height: 50vh; margin-top: 90px; width: 100%; display: flex; justify-content: center; text-align: center; align-items: center; object-fit:cover;">
+		<section class="banner-section" style="background-image: url(https://ganeshaaayurveda.com/assets/images/2.jpg); opacity: 0.9; background-size: cover; height: 50vh; margin-top: 90px; width: 100%; display: flex; justify-content: center; text-align: center; align-items: center; object-fit: contain;">
             <h3 class="banner-heading text-white" style="font-size: 3rem; font-weight: 700;">Contact Us</h3>
         </section>
 
