--- a/contactUs.html
+++ b/contactUs.html
@@ -37,6 +37,25 @@
 	============================================= -->
 	<title>Shankari Ayurveda</title>
 
+
+	<style>
+	@media screen and (max-width: 360px) {
+		.banner-section {
+    height: 30vh;
+	}
+	.banner-heading {
+   		 font-size: 2rem;
+	}
+	.section-heading {
+   	 font-size: 2rem;
+   	 font-weight: 700;
+	}
+	.section-heading.academic {
+  		  font-size: 1.5rem;
+	}
+	}
+	</style>
+
 </head>
 
 <!-- stretched (body)
