--- a/General nadi-parikshna.html
+++ b/General nadi-parikshna.html
@@ -71,7 +71,7 @@
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 					  <li><a class="dropdown-item" href="./General nadi-parikshna.html">Nadi Pariksha</a></li>
 					  <li><a class="dropdown-item" href="./premium-nadi-pariksha.html">Premium Nadi Pariksha</a></li>
-					  <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li>
+<!-- 					  <li><a class="dropdown-item" href="./panchakarma.html">Panchakarma</a></li> -->
 					</ul>
 				  </li>
 				  <li class="nav-item">
