--- a/index.html
+++ b/index.html
@@ -330,22 +330,21 @@
 						</div>
 						<!-- new -->
 
-						<div class="row justify-content-between align-items-stretch">
-							<div class="col-md-5">
-								<img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
-								<h5 class="display-5">Welcome to the Ayurveda</h5>
-								<h1>Dr. Sruthy P.R</h1>
-								
-								<div class="line my-4"></div>
-								<div class="d-inline-flex">
-									<h5>​BAMS , Senior Nadi Vaidya, Ayurveda Physician</h5>
-								</div>
-								
-							</div>
-							<div class="col-md-6">
-								<img src="https://shreemaathaaarogyadhaamam.com/static/img/consultant/DrSruthyJi.png" alt=".." class="rounded-6 h-100 object-cover">
-							</div>
-						</div>
+						<div class="row justify-content-between align-items-center vh-100">
+    <div class="col-md-5 text-center text-md-start d-flex flex-column justify-content-center">
+        <img src="demos/doctors/images/icons/wave.svg" alt="..." class="position-absolute top-0 start-0 translate-middle d-none d-md-block" width="36">
+        <h5 class="display-5">Welcome to the Ayurveda</h5>
+        <h1>Dr. Sruthy P.R</h1>
+        <div class="line my-4"></div>
+        <div class="d-inline-flex">
+            <h5>BAMS , Senior Nadi Vaidya, Ayurveda Physician</h5>
+        </div>
+    </div>
+    <div class="col-md-6 d-flex justify-content-center align-items-center">
+        <img src="https://shreemaathaaarogyadhaamam.com/static/img/consultant/DrSruthyJi.png" alt=".." class="rounded-6 h-80 object-cover">
+    </div>
+</div>
+
 						</div>
 						<!-- new ended -->
 
