General nadi-parikshna.html

--- a/General nadi-parikshna.html
+++ b/General nadi-parikshna.html
@@ -97,7 +97,7 @@
 				<div class="footer-widgets-wrap">
 					<div class="row gx-4 gy-5">
 
-						<div class="col-lg-6 col-12">
+						<div class="col-lg-4 col-12">
 
 							<div class="container" style=" display: flex;
 							align-items: center;">
@@ -109,25 +109,10 @@
 							  </div>
 						</div>
 
-						<!-- <div class="col-lg-6 col-sm-6">
+						<div class="col-lg-4">
+						</div>
 
-							<div class="widget widget_links widget-li-noicon">
-
-								<h4 class="text-uppercase mb-4">How we do</h4>
-
-								<ul>
-									<li><a href="#">Plugins</a></li>
-									<li><a href="#">Support Forums</a></li>
-									<li><a href="#">Themes</a></li>
-									<li><a href="#">Canvas Blog</a></li>
-									<li><a href="#">Contact Us</a></li>
-								</ul>
-
-							</div>
-
-						</div> -->
-
-						<div class="col-lg-6 col-sm-6">
+						<div class="col-lg-4 col-sm-6">
 
 							<div class="widget">
 
