--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 					</div>
 				</div> -->
 
-				<div class="section bg-transparent mt-0">
+				<div class="section bg-transparent mt-0 mb-0">
 					<div class="container">
 						<div class="col-md-12 align-items-center justify-content-center text-center">
 							<h2 class="display-4 mb-3">Our Specialized Departments</h2>
@@ -681,9 +681,7 @@
 			  <div class="card-body" style="height: auto;">
 				<h4 class="mb-0">Ramya Errabelli</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I'm a doctor& | was suffering with chronic ailments in my life . | was fedup with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. Specifically she suggested me to consult Dr. SHRUTI. After treatment of madam | got relief in 15daysonly.It's like miracle in my life. I'm so thankful to Shurtimadam &Sri Sri staff also. They gave good guidance &support to me. | have lost 4kgs wt in a month &got good health. | want to continue this treatment &l would like to suggest this treatment for any patient with chronic diseases. Thank you so much . | would like to suggest that pls encourage people to take this
-					panchakarma treatment for their health. | hope your centres in all over country will going to build up healthy India. 
-					</p>
+				<p class="card-text">I'm a doctor& I was suffering with chronic ailments in my life . I was fedup with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. Specifically she suggested me to consult Dr. SHRUTI. After treatment of madam I got relief in 15daysonly.It's like miracle in my life. I'm so thankful to Shurtimadam &Sri Sri staff also. They gave good guidance &support to me. I have lost 4kgs wt in a month &got good health.</p>
 			  </div>
 			</div>
 						  </div>
@@ -695,8 +693,8 @@
 			  <div class="card-body" style="height: 300px;">
 				<h4 class="mb-0">Vamsi Krish</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">One of the most finest treatment that ive come across in life. | found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level, to my surprise ive just got amazed by how all my
-					problems were diagnosed within 5mins of checking my naadi ® Special mention to ‘Dr.sruthy’ !!she has been so precise on the diagnosis and have seen excellent results from then 4 4 | strongly recommend this clinic for anyone who has health related issues ,infact all the doctors there and therapists there are very well trained and equipped to give us the best results and  experience possible</p>
+				<p class="card-text">One of the most finest treatment that ive come across in life. I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level, to my surprise ive just got amazed by how all my
+					problems </p>
 			  </div>
 			</div>
 						  </div>
@@ -747,9 +745,8 @@
 			  <div class="card-body " style="height: 300px;">
 				<h4 class="mb-0">Hemanth G</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">Amazing experience with Dr. Sruthy, a very rare nadi pariksha expert at  these times. She is very advanced with nadi diagnosis and Sidha Chikitsha( a unique treatment  which she does for critical patients). | have been suffering from chronic sciatica from 6 years
-					with my IT lifestyle. With just one visit she has identified and figured out the root cause  for my issue which was an injury long back. | took treatment sessions ,detox, and  medicines patiently. Within 3months | got relieved from my health issues completely. After that | 
-					have refered a lot of my colleagues to her. With her treatments everyone is extremely happy.  Its worth waiting eventhough it's little challenging to get her appointment because of her  extremely hectic schedules. A very heartfelt gratitude to Dr.Sruthy. Ever greatful.</p>
+				<p class="card-text">Amazing experience with Dr. Sruthy, a very rare nadi pariksha expert at  these times. She is very advanced with nadi diagnosis and Sidha Chikitsha( a unique treatment  which she does for critical patients). I have been suffering from chronic sciatica from 6 years
+					with my IT lifestyle. I took treatment sessions ,detox, and  medicines patiently. Within 3months I got relieved from my health issues completely.</p>
 			  </div>
 			</div>
 						  </div>
@@ -774,7 +771,7 @@
 			  <div class="card-body " style="height: 300px;">
 				<h4 class="mb-0">Sailaja Anand</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I am in online consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online Panchakarma detox as part of the treatment. | went through it as suggested by Dr. Shruthi ji. | was apprehensive about it especially because of it being online. But the whole detox program happened online comfortably and with timely guidence. At the end of it | had lost 4&1/2 Kgs weight and also my sugar levels have come to normal without any medication. There is also improvement in my digestion issues. Now, I'm very positive that my digestion issues get totally resolved soon with able guidance of Dr. Shruti ji. It is a complete holistic treatment and detox is something that every one should go through. Last but not the least, Ramesh Pratap ji's daily morning Yoga session is truly awesome. </p>
+				<p class="card-text">I am in online consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online Panchakarma detox as part of the treatment. I went through it as suggested by Dr. Shruthi ji. At the end of it I had lost 4&1/2 Kgs weight and also my sugar levels have come to normal without any medication It is a complete holistic treatment and detox is something that every one should go through. </p>
 			  </div>
 			</div>
 						  </div>
