--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body" style="height: auto;">
+			  <div class="card-body" style="height: 200px;">
 				<h4 class="mb-0">Ramya Errabelli</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">I'm a doctor& I was suffering with chronic ailments in my life . I was fedup with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. Specifically she suggested me to consult Dr. SHRUTI. After treatment of madam I got relief in 15daysonly.It's like miracle in my life. I'm so thankful to Shurtimadam &Sri Sri staff also. They gave good guidance &support to me. I have lost 4kgs wt in a month &got good health.</p>
