--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
 			  <div class="card-body" style="height: 200px;">
 				<h4 class="mb-0">Ramya Errabelli</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I'm a doctor& I was suffering with chronic ailments in my life . I was fedup with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. Specifically she suggested me to consult Dr. SHRUTI. After treatment of madam I got relief in 15daysonly.It's like miracle in my life. I'm so thankful to Shurtimadam &Sri Sri staff also. They gave good guidance &support to me. I have lost 4kgs wt in a month &got good health.</p>
+				<p class="card-text">I'm a doctor& I was suffering with chronic ailments in my life . I was fedup with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. After treatment of madam I got relief in 15 days only.</p>
 			  </div>
 			</div>
 						  </div>
@@ -693,8 +693,7 @@
 			  <div class="card-body" style="height: 300px;">
 				<h4 class="mb-0">Vamsi Krish</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">One of the most finest treatment that ive come across in life. I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level, to my surprise ive just got amazed by how all my
-					problems </p>
+				<p class="card-text">One of the most finest treatment that ive come across in life</p>. I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level</p>
 			  </div>
 			</div>
 						  </div>
@@ -706,8 +705,7 @@
 			  <div class="card-body " style="height: 300px;">
 				<h4 class="mb-0">Pooja Sonthalia</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I am very thankful to Shruthiji for advising me to go for detox...it was very helpful and | much needed for my body....it was little difficult initially but later it was comfortable...and after detox, i am feeling so light and my eating habits also changed and now i am
-					following a healthy routine ...i am very thankful to Praneet bhaiya for guiding me regularly and also Ramesh bhaiya for taking my yoga sessions everyday </p>
+				<p class="card-text">I am very thankful to Shruthiji for advising me to go for detox...it was very helpful and I much needed for my body....it was little difficult initially but later it was comfortable...and after detox, </p>
 			  </div>
 			</div>
 						  </div>
@@ -719,8 +717,8 @@
 			  <div class="card-body " style="height: 300px;">
 				<h4 class="mb-0">VenkataSubbarao Paruchuri</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I am not able to lift hand property for doing insert on daily basis due to right hand pain.| approached Dr.Shruti Madam in Sri Sri Ayurvedic clinic , Gachibowli.She had done treatment by using crystal once in a month. Treatment went very well and my hand is 
-					very comfortable to do any activity now.Madam suggested few yoga exercises and followed very  disciplined way.Thanks to Dr.Shurti madam and team for all the support</p>
+				<p class="card-text">.I approached Dr.Shruti Madam in Sri Sri Ayurvedic clinic , Gachibowli.She had done treatment by using crystal once in a month. Treatment went very well and my hand is 
+					very comfortable to do any activity now.</p>
 			  </div>
 			</div>
 						  </div>
@@ -745,8 +743,7 @@
 			  <div class="card-body " style="height: 300px;">
 				<h4 class="mb-0">Hemanth G</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">Amazing experience with Dr. Sruthy, a very rare nadi pariksha expert at  these times. She is very advanced with nadi diagnosis and Sidha Chikitsha( a unique treatment  which she does for critical patients). I have been suffering from chronic sciatica from 6 years
-					with my IT lifestyle. I took treatment sessions ,detox, and  medicines patiently. Within 3months I got relieved from my health issues completely.</p>
+				<p class="card-text">Amazing experience with Dr. Sruthy, a very rare nadi pariksha expert at  these times. She is very advanced with nadi diagnosis and Sidha Chikitsha( a unique treatment  which she does for critical patients). </p>
 			  </div>
 			</div>
 						  </div>
@@ -771,7 +768,7 @@
 			  <div class="card-body " style="height: 300px;">
 				<h4 class="mb-0">Sailaja Anand</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I am in online consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online Panchakarma detox as part of the treatment. I went through it as suggested by Dr. Shruthi ji. At the end of it I had lost 4&1/2 Kgs weight and also my sugar levels have come to normal without any medication It is a complete holistic treatment and detox is something that every one should go through. </p>
+				<p class="card-text">I am in online consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online Panchakarma detox as part of the treatment. I went through it as suggested by Dr. Shruthi ji. At the end of it I had lost 4&1/2 Kgs weight and also my sugar levels have come to normal without any medication </p>
 			  </div>
 			</div>
 						  </div>
