--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 			  <div class="card-body" style="height: 300px;">
 				<h4 class="mb-0">Vamsi Krish</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">One of the most finest treatment that ive come across in life</p>. I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level</p>
+				<p class="card-text">One of the most finest treatment that ive come across in life. I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level</p>
 			  </div>
 			</div>
 						  </div>
