--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 	============================================= -->
 	<title>Shankari Ayurveda</title>
 
-	 
+	 <style>
+		 @media screen and(max-width: 360px) {
+			 .card-body {
+				 height: 300px;
+			 }
+	 </style>
 
 </head>
 
@@ -678,7 +683,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body" style="height: 300px;">
+			  <div class="card-body" style="height: 180px;">
 				<h4 class="mb-0">Ramya Errabelli</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">I'm a doctor& I was suffering with chronic ailments in my life . I was fedup with all treatments then my cousin suggested me Sri Sri tattvapanchakarma treatment. After treatment of madam I got relief in 15 days only.</p>
@@ -690,10 +695,10 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body" style="height: 300px;">
+			  <div class="card-body" style="height: 180px;">
 				<h4 class="mb-0">Vamsi Krish</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">One of the most finest treatment that ive come across in life. I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level</p>
+				<p class="card-text">One of the most finest treatment that ive come across in life.<br> I found that Ayurveda is about a treatment which is given to completely give a permanent solution to the disease or illness from the grassroot level</p>
 			  </div>
 			</div>
 						  </div>
@@ -702,7 +707,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Pooja Sonthalia</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">I am very thankful to Shruthiji for advising me to go for detox...it was very helpful and I much needed for my body....it was little difficult initially but later it was comfortable...and after detox, </p>
@@ -714,7 +719,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">VenkataSubbarao Paruchuri</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">.I approached Dr.Shruti Madam in Sri Sri Ayurvedic clinic , Gachibowli.She had done treatment by using crystal once in a month. Treatment went very well and my hand is 
@@ -727,7 +732,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Dabbiru Vidyavathi</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">For severe back pain, I sought treatment at Sri Sri Tattva Panchakarma, Gachibowii. | experienced great results within a few weeks. | am grateful to Dr. Shruthi and her team for treatment and guidance. A world-class hospital with very good staff. | 
@@ -740,7 +745,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Hemanth G</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">Amazing experience with Dr. Sruthy, a very rare nadi pariksha expert at  these times. She is very advanced with nadi diagnosis and Sidha Chikitsha( a unique treatment  which she does for critical patients). </p>
@@ -752,7 +757,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Yarram Sudhir kumar Reddy</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">I have recently taken online detox offered by dr sruthy and staff.. it is
@@ -765,7 +770,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Sailaja Anand</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">I am in online consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online Panchakarma detox as part of the treatment. I went through it as suggested by Dr. Shruthi ji. At the end of it I had lost 4&1/2 Kgs weight and also my sugar levels have come to normal without any medication </p>
@@ -777,7 +782,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Chitra Balu</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">Excellent services, cordial,friendly, family atmosphere. Best doctors!! Diagnosis of Dr Shruthi is excellent. When ever | show to Dr Shruthi | fell confident and | am taken care.| have stopped going to Allopathic doctors and medicines.</p>
@@ -789,7 +794,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Manikya Lakshmi</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">I  went to Dr. Sruthy around two and a half years ago with acute wheeze and bronchitis. | recovered quite well after taking her treatment. For the last two years, i barely felt the need for any medicine related to these issues.</p>
@@ -801,7 +806,7 @@
 			  <div class="text-center">
 				<img src="https://hounslowpassportphotoshop.co.uk/images/blankimg.png" class="card-img-top" alt="..." style="height: 90px; width: 90px;">
 			  </div>
-			  <div class="card-body " style="height: 300px;">
+			  <div class="card-body " style="height: 180px;">
 				<h4 class="mb-0">Hemanth Kotra</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
 				<p class="card-text">Dr Shruty mam has been really helpful for us always.. My baby had severe cold for few weeks
