--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<title>Shankari Ayurveda</title>
 
 	 <style>
-		 @media screen and(max-width: 360px) {
+		 @media screen and(min-width: 360px) {
 			 .card-body {
 				 height: 300px;
 			 }
