--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	 <style>
 		 @media screen and(min-width: 360px) {
 			 .card-body {
-				 height: 300px;
+				min-height: 300px;
 			 }
 	 </style>
 
