--- a/index.html
+++ b/index.html
@@ -735,8 +735,7 @@
 			  <div class="card-body " style="height: 250px;">
 				<h4 class="mb-0">Dabbiru Vidyavathi</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">For severe back pain, I sought treatment at Sri Sri Tattva Panchakarma, Gachibowii. | experienced great results within a few weeks. | am grateful to Dr. Shruthi and her team for treatment and guidance. A world-class hospital with very good staff. | 
-					recommend this hospital to anyone who wants to stay healthy.</p>
+				<p class="card-text">For severe back pain, I sought treatment at Sri Sri Tattva Panchakarma, Gachibowii. I experienced great results within a few weeks. | am grateful to Dr. Shruthi and her team for treatment and guidance.</p>
 			  </div>
 			</div>
 						  </div>
@@ -773,7 +772,7 @@
 			  <div class="card-body " style="height: 250px;">
 				<h4 class="mb-0">Sailaja Anand</h4>
 				<img src="https://t3.ftcdn.net/jpg/05/31/76/76/360_F_531767656_9ZYTdKAhUXatTUAUp7iYi6coq9dy3nSF.jpg" alt="" style="width: auto; height: 30px;">
-				<p class="card-text">I am in online consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online Panchakarma detox as part of the treatment. I went through it as suggested by Dr. Shruthi ji. At the end of it I had lost 4&1/2 Kgs weight and also my sugar levels have come to normal without any medication </p>
+				<p class="card-text">consultation with Dr. Shruti ji regarding some nagging digestion issues and she had suggested me Sri Sri Tattva's online. At the end of it I had lost weight and also my sugar levels have come to normal without any medication </p>
 			  </div>
 			</div>
 						  </div>
